--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </section>
             <section class="cover bg-primary flex-column center">
                 <div class="bi">
-                    <h3 class="text-center">first appear</h3>
+                    <h3 class="text-center">on appear</h3>
                     <pre><code>director.assign($('.bi'),function($self){
     $self.addClass('bounceIn');
 });</code></pre>
